--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "App\\Twig\\": "src/Twig/"
         }
     },
     "autoload-dev": {
